// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getItemById returns item when the id is valid 1`] = `
Object {
  "description": "A weapon from the abyss.",
  "icon": "http://services.runescape.com/m=itemdb_oldschool/1583157682291_obj_big.gif?id=4151",
  "id": 4151,
  "members": true,
  "name": "Abyssal whip",
  "price": Object {
    "change": Object {
      "day180": -5981,
      "day30": -5981,
      "day90": -5981,
      "today": -5981,
    },
    "current": 2388108,
  },
}
`;

exports[`getItemByName returns item when the name is valid 1`] = `
Object {
  "description": "A weapon from the abyss.",
  "icon": "http://services.runescape.com/m=itemdb_oldschool/1583157682291_obj_big.gif?id=4151",
  "id": 4151,
  "members": true,
  "name": "Abyssal whip",
  "price": Object {
    "change": Object {
      "day180": -5981,
      "day30": -5981,
      "day90": -5981,
      "today": -5981,
    },
    "current": 2388108,
  },
}
`;

exports[`getItemPage returns item details array when valid alpha and page is given 1`] = `
Array [
  Object {
    "description": "world",
    "icon": "some-url",
    "id": 1234,
    "members": false,
    "name": "hello",
  },
  Object {
    "description": "world",
    "icon": "some-url",
    "id": 1234,
    "members": true,
    "name": "hello",
  },
]
`;

exports[`getItemPage returns item details array when valid alpha is given 1`] = `
Array [
  Object {
    "description": "world",
    "icon": "some-url",
    "id": 1234,
    "members": false,
    "name": "hello",
  },
  Object {
    "description": "world",
    "icon": "some-url",
    "id": 1234,
    "members": true,
    "name": "hello",
  },
]
`;

exports[`getItemPriceGraphById returns item when the id is valid 1`] = `
Object {
  "average": Object {
    "2019-09-05T00:00:00.000Z": 2528557,
    "2019-09-06T00:00:00.000Z": 2527956,
  },
  "daily": Object {
    "2019-09-05T00:00:00.000Z": 2490649,
    "2019-09-06T00:00:00.000Z": 2492999,
  },
}
`;

exports[`getItemPriceGraphByName returns item when the id is valid 1`] = `
Object {
  "average": Object {
    "2019-09-05T00:00:00.000Z": 1,
    "2019-09-06T00:00:00.000Z": 1,
  },
  "daily": Object {
    "2019-09-05T00:00:00.000Z": 1,
    "2019-09-06T00:00:00.000Z": 1,
  },
}
`;
